vlib/v/checker/tests/for_in_value_redefinition.vv
arr := [1,2,3]
value := 2

for _, value in arr {
	println(value)
}
